# app/Modules/ChatAI/routes/api_v1.php
@@ -1,0 +1,20 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+/*
+    |--------------------------------------------------------------------------
+    | API Routes
+    |--------------------------------------------------------------------------
+    |
+    | Here is where you can register API routes for your application. These
+    | routes are loaded by the RouteServiceProvider within a group which
+    | is assigned the "api" middleware group. Enjoy building your API!
+    |
+*/
+
+Route::middleware('auth:api')->group(function () {
+    Route::post('/chat', [Modules\ChatAI\App\Http\Controllers\Api\V1\ChatController::class, 'send']);
+});
+
+Route::post('/chat/test', [Modules\ChatAI\App\Http\Controllers\Api\V1\ChatController::class, 'test']);
