# storage/api-docs/api-docs.json
@@ -26,7 +26,7 @@
                                     "email": {
                                         "type": "string",
                                         "format": "email",
-                                        "example": "usuario@example.com"
+                                        "example": "test@example.com"
                                     },
                                     "password": {
                                         "type": "string",
@@ -151,96 +151,39 @@
                 ]
             }
         },
-        "/api/v1/auth/azure": {
+        "/api/v1/health": {
             "get": {
                 "tags": [
-                    "Social"
+                    "Health"
                 ],
-                "summary": "Redireciona para a autenticação do Azure",
-                "operationId": "redirectAzure",
-                "responses": {
-                    "302": {
-                        "description": "Redireciona para a página de autenticação do Azure"
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/azure/callback": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Callback para autenticação do Azure",
-                "operationId": "handleAzure",
+                "summary": "Verifica a saúde da API",
+                "operationId": "08446b2131153d4d904a591df15d8495",
                 "responses": {
                     "200": {
-                        "description": "Autenticação bem-sucedida",
+                        "description": "Status dos checks de saúde",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "access_token": {
+                                        "status": {
                                             "type": "string",
-                                            "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
+                                            "example": "ok"
                                         },
-                                        "token_type": {
-                                            "type": "string",
-                                            "example": "bearer"
-                                        },
-                                        "expires_in": {
-                                            "type": "integer",
-                                            "example": "3600"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Falha na autenticação"
-                    }
-                }
-            }
-        },
-        "/api/v1/chat/test": {
-            "post": {
-                "tags": [
-                    "Chat"
-                ],
-                "summary": "Envia mensagens para AI",
-                "operationId": "test",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "message"
-                                ],
-                                "properties": {
-                                    "message": {
-                                        "type": "string",
-                                        "format": "text",
-                                        "example": "Me conte uma piada"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Resposta da AI",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "reply": {
-                                            "type": "string",
-                                            "format": "text",
-                                            "example": "Por que o tomate foi ao banco?\\n\\nPorque ele queria tirar um extrato!\\n"
+                                        "checks": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "Database connection"
+                                                    },
+                                                    "status": {
+                                                        "type": "string",
+                                                        "example": "ok"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -249,59 +192,6 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/v1/chat": {
-            "post": {
-                "tags": [
-                    "Chat"
-                ],
-                "summary": "Envia mensagens para AI",
-                "operationId": "send",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "message"
-                                ],
-                                "properties": {
-                                    "message": {
-                                        "type": "string",
-                                        "format": "text",
-                                        "example": "Como posso realizar meu cadastro?"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Resposta da AI",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "reply": {
-                                            "type": "string",
-                                            "format": "text",
-                                            "example": "Acesse o link 'x', preencha seus dados ..."
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
             }
         },
         "/api/v1/impersonate/{id}": {
@@ -353,162 +243,6 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/v1/auth/linkedin": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Redireciona para a autenticação do LinkedIn",
-                "operationId": "redirectLinkedin",
-                "responses": {
-                    "302": {
-                        "description": "Redireciona para a página de autenticação do LinkedIn"
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/linkedin/callback": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Callback para autenticação do LinkedIn",
-                "operationId": "handleLinkedin",
-                "responses": {
-                    "200": {
-                        "description": "Autenticação bem-sucedida",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "access_token": {
-                                            "type": "string",
-                                            "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
-                                        },
-                                        "token_type": {
-                                            "type": "string",
-                                            "example": "bearer"
-                                        },
-                                        "expires_in": {
-                                            "type": "integer",
-                                            "example": "3600"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Falha na autenticação"
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/google": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Redireciona para a autenticação do Google",
-                "operationId": "redirectGoogle",
-                "responses": {
-                    "302": {
-                        "description": "Redireciona para a página de autenticação do Google"
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/google/callback": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Callback para autenticação do Google",
-                "operationId": "handleGoogle",
-                "responses": {
-                    "200": {
-                        "description": "Autenticação bem-sucedida",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "access_token": {
-                                            "type": "string",
-                                            "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
-                                        },
-                                        "token_type": {
-                                            "type": "string",
-                                            "example": "bearer"
-                                        },
-                                        "expires_in": {
-                                            "type": "integer",
-                                            "example": "3600"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Falha na autenticação"
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/facebook": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Redireciona para a autenticação do Facebook",
-                "operationId": "redirectFacebook",
-                "responses": {
-                    "302": {
-                        "description": "Redireciona para a página de autenticação do Facebook"
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/facebook/callback": {
-            "get": {
-                "tags": [
-                    "Social"
-                ],
-                "summary": "Callback para autenticação do Facebook",
-                "operationId": "handleFacebook",
-                "responses": {
-                    "200": {
-                        "description": "Autenticação bem-sucedida",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "access_token": {
-                                            "type": "string",
-                                            "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9..."
-                                        },
-                                        "token_type": {
-                                            "type": "string",
-                                            "example": "bearer"
-                                        },
-                                        "expires_in": {
-                                            "type": "integer",
-                                            "example": "3600"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Falha na autenticação"
-                    }
-                }
             }
         },
         "/api/v1/me": {
@@ -611,12 +345,8 @@
             "description": "Endpoints de autenticação de usuários"
         },
         {
-            "name": "Chat",
-            "description": "Endpoints de envio de mensagens para plataforma"
-        },
-        {
-            "name": "Social",
-            "description": "Endpoints de autenticação com redes sociais"
+            "name": "Health",
+            "description": "Verificação de saúde da API"
         },
         {
             "name": "Usuário",
